--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ background: url('assets/header.png') no-repeat center center;
   <section class="text-gray-600 body-font" style="color: #073B4E; background-color: whitesmoke;">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-        <img class="object-cover object-center rounded" alt="hero" src="assets/gif.gif">
+        <img class="object-cover object-center rounded" alt="hero" src="gif.gif">
       </div> 
       <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
           <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900" style="text-align: left; font-size: 3em; color: black;">V2A-Pool Peter Köber</h1>
@@ -199,7 +199,7 @@ background: url('assets/header.png') no-repeat center center;
         </div>
         <div class="lg:w-1/3 sm:w-1/2 p-4">
           <div class="flex relative">
-            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="assets/2.jpeg">
+            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="2.jpeg">
             <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
               <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">Detail</h2>
               <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Titel</h1>
@@ -209,7 +209,7 @@ background: url('assets/header.png') no-repeat center center;
         </div>
         <div class="lg:w-1/3 sm:w-1/2 p-4">
           <div class="flex relative">
-            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="assets/3.jpeg">
+            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="3.jpeg">
             <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
               <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">Detail</h2>
               <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Titel</h1>
@@ -229,7 +229,7 @@ background: url('assets/header.png') no-repeat center center;
         </div>
         <div class="lg:w-1/3 sm:w-1/2 p-4">
           <div class="flex relative">
-            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="assets/5.jpeg">
+            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="5.jpeg">
             <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
               <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">Detail</h2>
               <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Titel</h1>
